--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "hawk"
   ],
   "dependencies": {
-    "boom": "7.x.x",
-    "cryptiles": "4.x.x",
+    "boom": "7.3.0",
+    "cryptiles": "4.1.3",
     "hawk": "7.0.10",
-    "hoek": "6.x.x",
-    "iron": "5.x.x",
-    "joi": "14.x.x",
-    "wreck": "14.x.x"
+    "hoek": "6.1.2",
+    "iron": "5.0.6",
+    "joi": "14.3.0",
+    "wreck": "14.1.3"
   },
   "devDependencies": {
     "code": "5.x.x",
